--- a/estilos/style.css
+++ b/estilos/style.css
@@ -30,6 +30,9 @@ section#login{
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px black;
+
+    transition: width .3s, heigth .3s;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagen{
