--- a/estilos/style.css
+++ b/estilos/style.css
@@ -45,5 +45,15 @@ section#login > div#imagen{
 section#login > div#formulario{
     display: block;
     padding: 10px;
+    
+}
 
+div#formulario > h1{
+    text-align: center;
+    margin-bottom: 10px;
+
+}
+
+div#formulario > p{
+    font-size: 0.8em;
 }
