--- a/estilos/style.css
+++ b/estilos/style.css
@@ -57,3 +57,67 @@ div#formulario > h1{
 div#formulario > p{
     font-size: 0.8em;
 }
+
+form > div.campo{
+    height: 40px;
+    display: block;
+    border-radius: 5px;
+    margin-top: 5px;
+}
+
+div.campo > label{
+    display: none;
+}
+
+div.campo > span{
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input{
+    font-size: 1em;
+    border-radius: 5px;
+    width: calc(100% - 44px);
+    height: 100%;
+    transform: translateY(-10px);
+    padding: 4px;
+}
+
+form > input[type=submit]{
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    margin-top: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover{
+    background-color: grey;
+}
+
+form > a.botao{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    padding-top: 7px;
+    background-color: lightgray;
+    border: 1px solid black;
+    border-radius: 5px;
+    margin-top: 5px;
+    text-decoration: none;
+    color: black;
+}
+
+
+form > a.botao:hover{
+    background-color: grey;
+}
+
+form > a.botao > i{
+    font-size: 0.8em;
+}
