--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -6,6 +6,7 @@
     }
     section#login {
         width: 90vw;
+        height: 280px;
 
     }
 
@@ -27,6 +28,7 @@
     }
     section#login{
         width: 950px;
+        height: 350px;
     }
     
     section#login > div#imagen{
@@ -42,6 +44,7 @@
 
     div#formulario > p{
         font-size: 1.2em;
+        margin: 20px 0px;
     }
 
     
