--- a/estilos/style.css
+++ b/estilos/style.css
@@ -76,7 +76,8 @@ div.campo > span{
 
 div.campo > input{
     font-size: 1em;
-    border-radius: 5px; 
+    border-radius: 5px;
+    width: calc(100% - 70px); 
     height: 100%;
     padding: 4px;
     transform: translateY(-10px);
